--- a/frontend/src/app/componentes/administrador/modificar-producto/modificar-producto.component.css
+++ b/frontend/src/app/componentes/administrador/modificar-producto/modificar-producto.component.css
@@ -40,3 +40,23 @@
 .modify-image-card:hover .btn-delete-image {
     display: block;
 }
+
+.btn-primary:hover {
+    background-color: #9cd6d7;
+    color: #274f52;
+}
+
+.btn-primary {
+    background-color: #50a1a5;
+    border: none;
+}
+
+.btn-primary:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.btn-primary:active {
+    background-color: #9cd6d7 !important;
+    color: #274f52 !important;
+}
