Cambios de estilo inicio de sesión
Cambios realizados en archivo CSS del componente de inicio de sesión

--- a/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.css
+++ b/frontend/src/app/componentes/iniciar-sesion/iniciar-sesion.component.css
@@ -6,7 +6,6 @@
 
 .fondo-formulario {
     background-color: rgba(52, 58, 64, 0.8);
-    /*#343a40;*/
 }
 
 .icono-formulario {
@@ -19,6 +18,7 @@
 .btn:hover {
     background-color: #9cd6d7;
     color: #274f52;
+}
 
 .btn {
     background-color: #50a1a5;
