--- a/frontend/src/app/componentes/perfil/perfil.component.css
+++ b/frontend/src/app/componentes/perfil/perfil.component.css
@@ -1,28 +1,21 @@
 body {
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    margin-top: 20px;
+    color: #1a202c;
+    text-align: left;
+    background-image: url("../../../assets/img/fondo-perfil.jpg");
 }
 
-.emp-profile {
-    padding: 3%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border-radius: 0.5rem;
-    background: #fff;
+.file input {
+    position: absolute;
+    opacity: 0;
+    right: 0;
+    top: 0;
 }
 
-.profile-img {
-    text-align: center;
-}
-
-.profile-img img {
-    width: 70%;
-    height: 100%;
-}
-
-.profile-img .file {
+.file {
     position: relative;
     overflow: hidden;
-    margin-top: -20%;
+    margin-top: -10%;
     width: 70%;
     border: none;
     border-radius: 0;
@@ -30,85 +23,70 @@ body {
     background: #212529b8;
 }
 
-.profile-img .file input {
-    position: absolute;
-    opacity: 0;
-    right: 0;
-    top: 0;
+.icono-user {
+    font-size: 130%;
+    padding-right: 15px;
+    padding-top: 5px;
 }
 
-.profile-head h5 {
-    color: #333;
+.main-body {
+    padding: 15px;
 }
 
-.profile-head h6 {
-    color: #0062cc;
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .1), 0 1px 2px 0 rgba(0, 0, 0, .06);
 }
 
-.profile-edit-btn {
-    border: none;
-    border-radius: 1.5rem;
-    width: 70%;
-    padding: 2%;
-    font-weight: 600;
-    color: #6c757d;
-    cursor: pointer;
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0, 0, 0, .125);
+    border-radius: .25rem;
 }
 
-.proile-rating {
-    font-size: 12px;
-    color: #818182;
-    margin-top: 5%;
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
 }
 
-.proile-rating span {
-    color: #495057;
-    font-size: 15px;
-    font-weight: 600;
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
 }
 
-.profile-head .nav-tabs {
-    margin-bottom: 5%;
+.gutters-sm>.col,
+.gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
 }
 
-.profile-head .nav-tabs .nav-link {
-    font-weight: 600;
-    border: none;
+.mb-3,
+.my-3 {
+    margin-bottom: 1rem!important;
 }
 
-.profile-head .nav-tabs .nav-link.active {
-    border: none;
-    border-bottom: 2px solid #0062cc;
+.bg-gray-300 {
+    background-color: #e2e8f0;
 }
 
-.profile-work {
-    padding: 14%;
-    margin-top: -15%;
+.h-100 {
+    height: 100%!important;
 }
 
-.profile-work p {
-    font-size: 12px;
-    color: #818182;
-    font-weight: 600;
-    margin-top: 10%;
+.shadow-none {
+    box-shadow: none!important;
 }
 
-.profile-work a {
-    text-decoration: none;
-    color: #495057;
-    font-weight: 600;
-    font-size: 14px;
+.titulo {
+    font-size: 150%;
 }
 
-.profile-work ul {
-    list-style: none;
-}
-
-.profile-tab label {
-    font-weight: 600;
-}
-
-.profile-tab p {
-    font-weight: 600;
-    color: #0062cc;
+.active {
+    font-size: 120%;
 }
