--- a/frontend/src/app/componentes/administrador/foto-mod-producto/foto-mod-producto.component.html
+++ b/frontend/src/app/componentes/administrador/foto-mod-producto/foto-mod-producto.component.html
@@ -1,4 +1,4 @@
 <div class="position-relative modify-image-card" #contenedor>
-    <img [src]="src || '../../../../../assets/img/tarjeta5.jpg'" class="img-thumbnail">
+    <img [src]="src" class="img-thumbnail">
     <button title="Eliminar imagen" (click)="deleteImage(contenedor)" class="btn btn-delete-image"><b><i class="fas fa-times-circle"></i></b></button>
 </div>
