--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.css
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.css
@@ -42,12 +42,18 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     border: none;
+    margin-left: 7px;
+    margin-top: 5px;
 }
 
 #carro_compra {
     margin-left: 15px;
-    margin-top: 10px;
+    margin-top: 12px;
     margin-bottom: 10px;
     size: 10px;
     color: white;
+}
+
+.dropdown-item:hover {
+    background-color: rgba(75, 192, 91, 0.5);
 }
