--- a/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
+++ b/frontend/src/app/componentes/compartidos/encabezado/encabezado.component.html
@@ -40,7 +40,7 @@
 
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" style="width: 200px; ">
-                    <div class="input-group flex-nowrap">
+                    <div class="input-group flex-nowrap" style="margin-top: 5px;">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="addon-wrapping"><i class="fas fa-search"></i></span>
                         </div>
@@ -54,7 +54,7 @@
                             <li class="nav-item">
                                 <div class="btn-group" style="padding-right: 10px;">
                                     <button type="button" id="usuario" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-                 Usuario
+                 {{nombreUsuario}}
                 </button>
                                     <div class="dropdown-menu dropdown-menu-lg-right" routerLinkActive="active">
                                         <button class="dropdown-item" type="button" [routerLink]="['/perfil']">Mi Perfil</button>
