--- a/frontend/src/app/componentes/perfil/perfil.component.css
+++ b/frontend/src/app/componentes/perfil/perfil.component.css
@@ -15,12 +15,13 @@ body {
 .file {
     position: relative;
     overflow: hidden;
-    margin-top: -10%;
+    margin-top: 1%;
     width: 70%;
     border: none;
     border-radius: 0;
     font-size: 15px;
-    background: #212529b8;
+    color: black;
+    background: rgba(75, 192, 91, 0.5);
 }
 
 .icono-user {
@@ -52,18 +53,18 @@ body {
 .card-body {
     flex: 1 1 auto;
     min-height: 1px;
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 .gutters-sm {
-    margin-right: -8px;
-    margin-left: -8px;
+    margin-right: -7px;
+    margin-left: -7px;
 }
 
 .gutters-sm>.col,
 .gutters-sm>[class*=col-] {
-    padding-right: 8px;
-    padding-left: 8px;
+    padding-right: 1px;
+    padding-left: 1px;
 }
 
 .mb-3,
@@ -85,8 +86,18 @@ body {
 
 .titulo {
     font-size: 150%;
+    padding-left: 15px;
+    font-weight: bold;
+    background: -webkit-linear-gradient(#55a377, #a4b357);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: tomato;
 }
 
 .active {
     font-size: 120%;
+}
+
+.btn:hover {
+    background-color: #52a877;
 }
