--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.css
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.css
@@ -1,245 +1,143 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
-html,
-body {
-    margin: 0;
-    padding: 0;
+#wrapper {
     overflow-x: hidden;
-    font-family: Roboto;
-    height: 100%;
-    overflow-y: hidden;
-    /* Hide scrollbars */
 }
 
-.bajo {
-    z-index: -3;
+
+/*navbar*/
+
+#campana {
+    margin-left: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    size: 70px;
+    color: white;
 }
 
-.imagen {
-    width: 50px;
-    height: 30px;
-    padding-left: 20px;
+#titulo {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 150%;
+    color: white;
 }
 
-.texto1 {
-    font-size: 0px;
+.admin {
+    background: linear-gradient(to left, #50a1a5, #88df8f);
 }
 
-.texto2 {
-    font-size: 0px;
+#logo {
+    margin-left: 10px;
 }
 
-.encabezado {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
+.boton-menu {
+    background-color: transparent;
+    border-color: teal;
 }
 
 .icono {
-    padding-left: 25px;
-    font-size: 110%;
+    padding-left: 20px;
+    font-size: 130%;
 }
 
 .span {
     padding-left: 15px;
-    font-size: 80%;
+    font-size: 100%;
 }
 
-.hide {
-    display: none;
-}
-
-.content-admin {
-    margin-top: 50px;
-}
-
-.head-nav li:hover {
-    background-color: #3DE3AC;
-}
-
-.head-nav .imagen li:hover {
-    background-color: transparent;
-}
-
-.head-nav li:hover:before {
-    background-color: #1a1a1a;
-}
-
-.head-nav li:hover svg {
-    background: #3DE3AC;
-    fill: white;
-}
-
-.head-nav li:hover a {
-    color: black;
-}
-
-.head-nav li:before {
-    position: absolute;
-    left: -0.925rem;
-    top: 0;
-    width: 0.925rem;
-    height: 100%;
-    content: "";
-    background: #ed1c5b;
-    z-index: 1;
-    transition: background 400ms;
-}
-
-.head-nav ul {
-    margin-top: 1.85rem;
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    padding: 0;
-    list-style: none;
-    margin-top: 0px;
-}
-
-.head-nav li {
-    position: relative;
-    clear: both;
-    width: 100%;
-    padding: 0;
-    transition: background 400ms;
-}
-
-.head-nav li a {
-    display: flex;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-}
-
-.head-nav a {
-    align-items: center;
-    width: 100%;
-    color: black;
-    text-decoration: none;
-    transition: color 400ms;
-}
-
-.head-nav a span {
-    position: relative;
-    display: block;
-    z-index: 0;
-    font-family: Roboto;
-    text-indent: -20em;
-    white-space: nowrap;
-    transition: text-indent 400ms ease-in-out;
-}
-
-.head-nav svg {
-    position: relative;
-    max-width: 80px;
-    max-height: 30px;
-    z-index: 1;
-    fill: #fefefe;
-    background: #ed1c5b;
-    transition: 400ms;
-}
-
-@media screen and (max: 768px) {
-    .head-nav ul {
-        margin-top: 0.23125rem;
-    }
-    .head-nav svg {
-        max-width: 20px;
-    }
-}
-
-.main-head {
-    position: relative;
-    bottom: 0;
-    width: 80px;
-    height: 70%;
-    z-index: 1;
-    transition: width 400ms;
-    /* top: 130px; */
-    background: transparent;
-}
-
-.main-head:hover {
-    width: 180px;
-}
-
-.main-head:hover .imagen {
-    width: 130px;
+.imagen {
+    width: 145px;
     height: 90px;
-    padding-left: 45px;
+    padding-left: 55px;
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
 
-.main-head:hover .texto1 {
+.texto1 {
     font-size: 90%;
     color: black;
-    padding-left: 15px;
+    padding-left: 35px;
 }
 
-.main-head:hover .texto2 {
+.texto2 {
     font-size: 100%;
-    padding-left: 40px;
+    padding-left: 50px;
     color: black;
     width: bold;
 }
 
-.main-head:hover+.wrap-all-the-things {
-    transform: translateX(80px);
-    max-width: 100%;
-    opacity: 0.4;
+.cerrar-sesion {
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+    background: transparent;
+    border: 2px solid #68c1c5;
+    outline: none;
+    transition: 1s ease-in-out;
+    color: white;
+    margin-left: 15px;
 }
 
-.main-head:hover .head-nav li:nth-of-type(1) span {
-    transition-delay: 100ms;
+.btn span {
+    color: white;
+    font-size: 18px;
+    font-weight: 100;
 }
 
-.main-head:hover .head-nav li:nth-of-type(2) span {
-    transition-delay: 200ms;
+.btn:hover {
+    transition: 1s ease-in-out;
+    background: #3e7b7e;
 }
 
-.main-head:hover .head-nav li:nth-of-type(3) span {
-    transition-delay: 300ms;
+#sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+    background: linear-gradient(to top, #a7fcd8, #88df8f);
 }
 
-.main-head:hover .head-nav li:nth-of-type(4) span {
-    transition-delay: 400ms;
+.list-group-item-action {
+    background: linear-gradient(to top, #a7fcd8, #a7fcd8);
 }
 
-.main-head:hover .head-nav li:nth-of-type(5) span {
-    transition-delay: 500ms;
+.list-group-item-action:hover {
+    background: linear-gradient(to top, #5cbb93, #5cbb93);
+    color: white;
 }
 
-.main-head:hover .head-nav li:nth-of-type(6) span {
-    transition-delay: 600ms;
+#sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
 }
 
-.main-head:hover .head-nav span {
-    text-indent: 0;
+#sidebar-wrapper .list-group {
+    width: 15rem;
 }
 
-@media screen and (max: 768px) {
-    .main-head {
-        width: 70px;
-        padding: 0 0.925rem;
-    }
-    .main-head .head-nav {
-        padding-left: 7px;
-    }
-    .main-head:hover .head-nav span {
-        text-indent: 1em;
-    }
+#page-content-wrapper {
+    min-width: 100vw;
 }
 
-.wrap-all-the-things {
-    min-height: 100%;
-    height: 100%;
-    /* padding-left: 140px; */
+#wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+}
+
+.container-fluid {
     margin-top: 20px;
-    background-size: cover;
-    background-position: center center;
-    transition: transform 400ms, opacity 400ms;
-    /* padding-right: 100px; */
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-@media screen and (max: 480px) {
-    .wrap-all-the-things {
-        padding-left: 70px;
+@media (min-width: 768px) {
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
     }
 }
