--- a/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.css
+++ b/frontend/src/app/componentes/administrador/controlador-admin/controlador-admin.component.css
@@ -35,33 +35,28 @@
 
 .icono {
     padding-left: 20px;
-    font-size: 130%;
+    font-size: 150%;
 }
 
 .span {
     padding-left: 15px;
-    font-size: 100%;
+    font-size: 120%;
 }
 
 .imagen {
-    width: 145px;
-    height: 90px;
-    padding-left: 55px;
+    font-size: 600%;
+    padding-left: 75px;
     margin-top: 40px;
     margin-bottom: 10px;
-}
-
-.texto1 {
-    font-size: 90%;
-    color: black;
-    padding-left: 35px;
+    color: white;
 }
 
 .texto2 {
-    font-size: 100%;
-    padding-left: 50px;
-    color: black;
+    font-size: 140%;
+    padding-left: 35px;
+    color: white;
     width: bold;
+    background: rgba(75, 192, 192, 0.4);
 }
 
 .cerrar-sesion {
@@ -94,11 +89,11 @@
     -moz-transition: margin .25s ease-out;
     -o-transition: margin .25s ease-out;
     transition: margin .25s ease-out;
-    background: linear-gradient(to top, #a7fcd8, #88df8f);
+    background-image: url("../../../../assets/img/3108.jpg");
 }
 
 .list-group-item-action {
-    background: linear-gradient(to top, #a7fcd8, #a7fcd8);
+    background: rgba(75, 192, 192, 0.7);
 }
 
 .list-group-item-action:hover {
