--- a/frontend/src/app/componentes/administrador/agregar-producto/agregar-producto.component.html
+++ b/frontend/src/app/componentes/administrador/agregar-producto/agregar-producto.component.html
@@ -8,115 +8,166 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
-            <div class="col-6">
-              <div class="form-row">
-                <div class="col-md-6 mb-3">
-                  <label for="validationServer01">Nombre</label>
-                  <input type="text" class="form-control form-control-sm" id="validationServer01" required>
-                  <div class="invalid-feedback">
-                    Campo obligatorio
-                  </div>
-                </div>
-                  <div class="col-md-3 mb-3">
-                    <label for="validationServer05">Cantidad</label>
-                    <input type="number" class="form-control form-control-sm" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-                    <div id="validationServer03Feedback" class="invalid-feedback">
-                      Please provide a valid city.
-                    </div>
-                  </div>
-                  <div class="col-md-3 mb-3">
-                    <label for="validationServer06">Precio (L)</label>
-                    <input type="number" class="form-control form-control-sm" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-                    <div id="validationServer05Feedback" class="invalid-feedback">
-                      Please provide a valid zip.
-                    </div>
-                  </div>
-              </div>
-              <div class="form-row">
+          <form [formGroup]="formularioProducto">
+            <div class="row">
+              <div class="col-6">
+                <div class="form-row">
                   <div class="col-md-6 mb-3">
-                      <label for="validationServer02">Tipo de base</label>
-                      <select class="custom-select custom-select-sm">
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
-                  </div>
-                    <div class="col-md-6 mb-3">
-                      <label for="validationServer02">Categoría</label>
-                      <select class="custom-select custom-select-sm">
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                      </select>
-                    </div>
-              </div>
-              <div class="form-row">
-                  <div class="col-md-12 mb-3">
-                      <label for="validationServer04">Especies</label>
-                      <select multiple  class="custom-select custom-select-sm" data-live-search="true" size="3">
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                          <option value="3">Four</option>
-                      </select>
-                  </div>
-              </div>
-             
-              <div class="form-row">
-                  <div class="col-md-4 mb-3">
-                    <label for="validationServer05">Tiempo de sol</label>
-                    <input type="text" class="form-control form-control-sm" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-                    <div id="validationServer03Feedback" class="invalid-feedback">
-                      Please provide a valid city.
+                    <label for="validationServer01">Nombre</label>
+                    <input type="text" formControlName="nombre" [class.is-invalid]="validation('nombre')" class="form-control form-control-sm" id="validationServer01" required>
+                    <div class="invalid-feedback">
+                      Campo obligatorio
                     </div>
                   </div>
-                  <div class="col-md-4 mb-3">
-                    <label for="validationServer06">Frecuencia de riego</label>
-                    <input type="text" class="form-control form-control-sm" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-                    <div id="validationServer05Feedback" class="invalid-feedback">
-                      Please provide a valid zip.
-                    </div>
-                  </div>
-                  <div class="col-md-4 mb-3">
-                      <label for="validationServer06">Tamaño</label>
-                      <input type="text" class="form-control form-control-sm" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-                      <div id="validationServer05Feedback" class="invalid-feedback">
-                        Please provide a valid zip.
+                    <div class="col-md-3 mb-3">
+                      <label for="validationServer02">Cantidad</label>
+                      <input type="number" formControlName="cantidad" [class.is-invalid]="validation('cantidad')" class="form-control form-control-sm" id="validationServer02" required>
+                      <div class="invalid-feedback">
+                        Campo obligatorio
                       </div>
-                  </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                      <label for="validationServer03">Precio</label>
+                      <div class="input-group input-group-sm mb-3">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text">L</span>
+                        </div>
+                        <input type="number" formControlName="precio" [class.is-invalid]="validation('precio')" class="form-control" aria-label="lempira">
+                        <div class="invalid-feedback">
+                          Campo obligatorio
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="validationServer04">Tipo de base</label>
+                        <select class="custom-select custom-select-sm" formControlName="base" [class.is-invalid]="validation('base')" >
+                            <option active disable value="">Seleccionar...</option>  
+                            <option *ngFor="let base of tipoBases" value="{{base.idtipobase}}">{{base.descripcion}}</option>
+                          </select>
+                          <div class="invalid-feedback">
+                           Debe seleccionar un tipo de base
+                          </div>
+                    </div>
+                      <div class="col-md-6 mb-3">
+                        <label for="validationServer05">Categoría</label>
+                        <select class="custom-select custom-select-sm" formControlName="categoria" [class.is-invalid]="validation('categoria')">
+                          <option active disable value="">Seleccionar...</option>  
+                          <option *ngFor="let categoria of categorias" value="{{categoria.idcategoria}}">{{categoria.descripcion}}</option>
+                        </select>
+                        <div class="invalid-feedback">
+                          Debe seleccionar una categoría
+                        </div>
+                      </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="validationServer07">Especies</label>
+                        <button type="button" id="addNuevaEspecie" class="btn btn-info mb-1 ml-1 p-0 add"><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+                        <select multiple  class="custom-select custom-select-sm" data-live-search="true" size="3" formControlName="especies" [class.is-invalid]="validation('especies')" >
+                            <option *ngFor="let especie of especies" value="{{especie.idespecie}}">{{especie.descripcion_especie}}</option>
+                        </select>
+                        <div class="invalid-feedback">
+                          Debe seleccionar al menos una especie
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                      <form [formGroup]="formularioEspecie">
+                      <button type="button"  class="btn btn-sm btn-info mb-1" style="border-radius: 50px"><i class="fa fa-check-circle" aria-hidden="true"></i> Agregar</button>
+                      <input type="text" class="form-control form-control-sm mb-1" formControlName="especie" [class.is-invalid]="validationEspecie('especie')" placeholder="Nombre de la nueva especie" id="validationServer08"  required>
+                      <select class="custom-select custom-select-sm" formControlName="genero" [class.is-invalid]="validationEspecie('genero')">
+                        <option active disable value="" >Seleccione el género</option>  
+                        <option *ngFor="let categoria of categorias" value="{{categoria.idcategoria}}">{{categoria.descripcion}}</option>
+                      </select>
+                      <div class="invalid-feedback">
+                        Debe seleccionar un género
+                      </div>
+                    </form>
+                    </div>
+                </div>
+               
+                <div class="form-row">
+                    <div class="col-md-4 mb-3">
+                      <label for="validationServer09">Tiempo de sol</label>
+                      <input type="text" class="form-control form-control-sm" formControlName="tiempoSol" id="validationServer09"  required>
+                      
+                    </div>
+                    <div class="col-md-4 mb-3">
+                      <label for="validationServer10">Frecuencia de riego</label>
+                      <input type="text" class="form-control form-control-sm" formControlName="riego" id="validationServer10"  required>
+                      
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <label for="validationServer11">Tamaño</label>
+                        <input type="text" class="form-control form-control-sm" formControlName="tamanio" [class.is-invalid]="validation('tamanio')" id="validationServer11"  required>
+                        <div class="invalid-feedback">
+                          Campo obligatorio
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-12 mb-3">
+                        <label for="descripcion">Descripción</label>
+                        <textarea class="form-control form-control-sm" formControlName="descripcion" id="descripcion" rows="3"></textarea>
+                    </div>
+                </div>
               </div>
-              <div class="form-row">
-                  <div class="col-md-12 mb-3">
-                      <label for="exampleFormControlTextarea1">Descripción</label>
-                      <textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <div class="col-6">
+                <div class="form-row">
+                  <h5 style="color: #ECC5CE;">Fotografías</h5>
+                </div>
+                <div class="form-row">
+                  <div class="ui cards centered ">
+                    <label class="btn card ml-auto mr-auto w-50" (click)="inputPortada.click()" for="validationServer12">
+                      <h4 style="color: cadetblue;" >Añadir portada</h4>
+                      <div class="image">
+                        <img class=" w-100" src="../../../../assets/img/administrador/portada_icon.png" style="opacity: 35%;" >
+                      </div>
+                    </label>
                   </div>
-              </div>
-            </div>
-            <div class="col-6">
 
+                  <input
+                  type="file"
+                  accept=".jpg,.jpeg,.png"
+                  class="custom-file-input"
+                  id="validationServer12"
+                  name="img"
+                  multiple
+                  (imageSelected)="selected($event, 'portada')"
+                  class="d-none"
+                  #inputPortada
+                  >
+                </div>
+
+                <div class="form-row">
+                  <button type="button" class="btn btn-sm btn-info mb-2" (click)="inputMultiple.click()" style="border-radius: 15px;"> <i class="fa fa-plus-circle" aria-hidden="true"></i> Añadir más</button>
+                           
+                  <input
+                  type="file"
+                  accept=".jpg,.jpeg,.png"
+                  class="custom-file-input"
+                  id="validationServer13"
+                  name="img"
+                  multiple
+                  (imageSelected)="selected($event, 'multiplesFotos')"
+                  class="d-none"
+                  #inputMultiple
+                  >
+                </div>
+                <div class="form-row">
+                  <img class="ml-auto" style="opacity: 35%; width: 35%;" src="../../../../assets/img/administrador/fotos.jpg">
+                </div>
+
+              </div>
             </div>
             <!-- <button class="btn btn-primary" type="submit">Agregar</button> -->
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Agregar producto</button>
+          <button type="submit" class="btn btn-agregar">Agregar producto</button>
         </div>
       </div>
     </div>
   </div>
-
-
-nombre producto 
-categoria
-tipobase
-especies
-cantidad
-precio 
-tiempo sol 
-frecuencia riego 
-tamaño 
-descripción 
-imagen portada 
-imagenes galeria 
