--- a/frontend/src/app/componentes/administrador/inventario/inventario.component.html
+++ b/frontend/src/app/componentes/administrador/inventario/inventario.component.html
@@ -69,7 +69,7 @@
                         <td><button class="btn btn-link">Ver más</button></td>
                         <td>{{producto.categoria}}</td>
                         <td class="text-center">{{producto.cantidad}}</td>
-                        <td>{{producto.precio}}</td>
+                        <td>L {{producto.precio}}</td>
                         <td>
                             <button class="btn btn-sm" type="button"><i class="fa fa-trash mr-4" aria-hidden="true"></i></button>
                         </td>
